<resources>
    <string name="app_name">YestodoPersonal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_grup">Grup</string>
    <string name="menu_profil">Profil</string>
    <string name="menu_kontak">Kontak</string>
    <string name="menu_katasandi">Ubah Kata Sandi</string>
    <string name="menu_kebijakan">Kebijakan Privasi</string>
    <string name="menu_ketentuan">Ketentuan Layanan</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_homescreen">HomescreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>